{{cookiecutter.app_name}}/.local/k8s/iaac/modules/mysql/adminer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: database
  labels:
      app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer
        ports:
          - containerPort: 8080
---
