{{cookiecutter.app_name}}/.local/k8s/iaac/modules/mysql/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: database
  labels:
      app: adminer
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
